# dog

./: aws_module.py  metadata.json  openai_module.py  pyproject.toml  requirement.txt  requirements.txt  sql_module.py  streamlit_app.py  test_sql_connection.py  upload_data_to_s3.py  upload_metadata_rdb.py
