[tool.poetry]
name = "assignment1"
version = "0.1.0"
description = ""
authors = ["y"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.47.1"
streamlit = "^1.38.0"
boto3 = "^1.35.26"
dotenv = "^0.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
